--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.5",
+    "katex": "^0.16.22",
     "lucide-react": "^0.487.0",
+    "mathjax": "^3.2.2",
     "next": "15.2.5",
     "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
@@ -29,6 +31,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-markdown": "^10.1.0",
+    "react-mathjax": "^1.0.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^7.1.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
@@ -39,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-mathjax": "^1.0.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
